--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD}
     ports:
       - "8080:8080"
+    networks:
+      - backend
+    depends_on:
+      - nginx
 
   nginx:
     image: nginx
@@ -17,3 +27,9 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt
+    networks:
+      - backend
+
+networks:
+  backend:
+    driver: bridge
